--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ after_success:
   - if [[ -z "$TRAVIS_TAG" ]]; then
       echo "Skipping push" ;
     else
-      docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD ;
+      docker login -u $DOCKER_USERNAME -p $DOCKER_PASS ;
       docker tag "vuepress" "vuepress:latest" ;
       docker tag "vuepress" "vuepress:${TRAVIS_TAG}" ;
       docker push "vuepress:latest" ;
